# hwpg

./: .flake8  README.md  hwpg.lark  hwpg.py  mlpg.lark  mlpg.py  pyproject.toml
docs/: LEXER_GENERATOR.md
examples/: func_call.hwpg  func_call.mlpg  hwpg.hwpg  json.mlpg  mlpg.mlpg
examples/json/: json.hwpg  json.py  json_cfg.py
examples/json/parser/: parser.py  test_parser.py  tokens.py
hwpg/: ast.py  config.py  lexergen.py  parsergen.py  process.py
hwpg/runtime/python/: lexer_codegen.py  parser_codegen.py
mlpg/: ast.py  config.py  lexergen.py  parsergen.py  process.py
mlpg/runtime/python/: emitter.py  lexer.py  lexer_codegen.py  parser.py  parser_codegen.py
runtime/python/: emitter.py  parser.py
templates/python/: parser.py.j2  tokens.py.j2
