[tool.poetry]
name = "hwpg"
version = "0.1.0"
description = "Multi Language Parser Generator"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.11.2"
Jinja2 = "^2.11.3"
click = "^7.1.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.7.4"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
